Implemented:Fixing UI and User Profile infos

--- a/backend-api/.env.example
+++ b/backend-api/.env.example
@@ -1,9 +1,10 @@
-APP_NAME=Laravel
+APP_NAME=taic-api
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:YbMU/Jbhb68UK+CyKNfubtqqi29UI2MRvvmZcy9pGXI=
 APP_DEBUG=true
 APP_TIMEZONE=UTC
-APP_URL=http://localhost
+APP_URL=http://localhost:2230
+FRONTEND_URL=http://localhost:3000
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
@@ -19,12 +20,12 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=sqlite
-# DB_HOST=127.0.0.1
-# DB_PORT=3306
-# DB_DATABASE=laravel
-# DB_USERNAME=root
-# DB_PASSWORD=
+# DB_CONNECTION=sqlite
+DB_HOST=taic-reg_mysql_db
+DB_PORT=3306
+DB_DATABASE=taic_reg_ictc
+DB_USERNAME=root
+DB_PASSWORD=BeyondOrder24
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
@@ -46,13 +47,13 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_MAILER=log
-MAIL_HOST=127.0.0.1
-MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS="hello@example.com"
+MAIL_MAILER=smtp
+MAIL_HOST=smtp4.eganet.go.tz
+MAIL_PORT=25
+MAIL_USERNAME="ictsupport@ictc.go.tz"
+MAIL_PASSWORD="Support@2023"
+MAIL_ENCRYPTION=
+MAIL_FROM_ADDRESS="ictsupport@ictc.go.tz"
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
