--- a/site-app/.env
+++ b/site-app/.env
@@ -1,3 +1,3 @@
 API_URL='http://localhost:2230'
-BASE_URL="http://localhost:3001"
-API_KEY="your_api_key_here"
+BASE_URL="http://localhost:3000"
+API_KEY="your_api_key_here"%
