--- a/backend-api/.env.example
+++ b/backend-api/.env.example
@@ -51,10 +51,11 @@ MAIL_MAILER=smtp
 MAIL_HOST=smtp4.eganet.go.tz
 MAIL_PORT=25
 MAIL_USERNAME="ictsupport@ictc.go.tz"
-MAIL_PASSWORD="Support@2023"
-MAIL_ENCRYPTION=
+MAIL_PASSWORD="Support@2024"
+MAIL_ENCRYPTION="TLS"
 MAIL_FROM_ADDRESS="ictsupport@ictc.go.tz"
 MAIL_FROM_NAME="${APP_NAME}"
+
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
