Implement: Fix:Email Verification  mode 4

--- a/backend-api/.env.example
+++ b/backend-api/.env.example
@@ -1,10 +1,12 @@
 APP_NAME=taic-api
 APP_ENV=local
-APP_KEY=base64:YbMU/Jbhb68UK+CyKNfubtqqi29UI2MRvvmZcy9pGXI=
+APP_KEY=
 APP_DEBUG=true
 APP_TIMEZONE=UTC
-APP_URL=http://localhost:2230
-FRONTEND_URL=http://localhost:3000
+APP_URL=http://staging.ictc.go.tz
+FRONTEND_URL=http://staging.ictc.go.tz:2224
+SANCTUM_STATEFUL_DOMAINS=staging.ictc.go.tz:2224
+
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
@@ -31,7 +33,7 @@ SESSION_DRIVER=database
 SESSION_LIFETIME=120
 SESSION_ENCRYPT=false
 SESSION_PATH=/
-SESSION_DOMAIN=null
+SESSION_DOMAIN=ictc.go.tz
 
 BROADCAST_CONNECTION=log
 FILESYSTEM_DISK=local
@@ -49,13 +51,12 @@ REDIS_PORT=6379
 
 MAIL_MAILER=smtp
 MAIL_HOST=smtp4.eganet.go.tz
-MAIL_PORT=25
+MAIL_PORT=587
 MAIL_USERNAME="ictsupport@ictc.go.tz"
-MAIL_PASSWORD="Support@2024"
-MAIL_ENCRYPTION="TLS"
+MAIL_PASSWORD='Support@2024'
+MAIL_ENCRYPTION=null
 MAIL_FROM_ADDRESS="ictsupport@ictc.go.tz"
-MAIL_FROM_NAME="${APP_NAME}"
-
+MAIL_FROM_NAME="ICTC - Events"
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
