--- a/backend-api/.env.example
+++ b/backend-api/.env.example
@@ -56,7 +56,7 @@ MAIL_USERNAME="ictsupport@ictc.go.tz"
 MAIL_PASSWORD='Support@2024'
 MAIL_ENCRYPTION=null
 MAIL_FROM_ADDRESS="ictsupport@ictc.go.tz"
-MAIL_FROM_NAME="ICTC - Events"
+MAIL_FROM_NAME="ICTC - Softcenter"
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
