--- a/backend-api/docker-compose.yml
+++ b/backend-api/docker-compose.yml
@@ -1,30 +1,30 @@
 services:
-  events-finalized:
-    container_name: events-finalized
+  events-test:
+    container_name: events-test
     build:
       context: .
       dockerfile: Dockerfile
     volumes:
       - ./:/var/www/html
     ports:
-      - 2360:80
+      - 2007:80
 
-  event_app_db:
-    container_name: event_app-ictc-db
+  events_test_db:
+    container_name: event_test_db
     image: mysql:8.0.33
     environment:
       MYSQL_ROOT_PASSWORD: CallForOrder123455
-      MYSQL_DATABASE: events_ictc_db
+      MYSQL_DATABASE: events_test_db
     volumes:
       - mysql_data:/var/lib/mysql
     ports:
-    - 3327:3306
+    - 3307:3306
 
-  event_app_phpmyadmin:
+  events_test_phpmyadmin:
     container_name: event_app-phpmyadmin
     image: phpmyadmin:5.2.1
     ports:
-      - 6234:80
+      - 6207:80
     environment:
       - PMA_ARBITRARY=1
 
