--- a/backend-api/Makefile
+++ b/backend-api/Makefile
@@ -20,7 +20,6 @@ bash:
 	docker exec -it  events-test bash
 start:
 	docker compose restart
-	# cd  mgt-app/ && pm2 restart ecosystem.config.cjs
 boost:
 	docker exec  events-test bash -c "php artisan optimize"
 	docker exec  events-test bash -c "composer dump-autoload"
@@ -54,26 +53,28 @@ setup.production:
 	@make build.production
 	@make up.production
 	@make composer-update.production
-	@yarn
+	@make boost.production
+	@make yarn.production
 
 build.production:
-	docker compose -f docker-compose.productionrod.yml build 
+	docker compose -f docker-compose.prod.yml build 
 
 stop.production:
-	docker compose -f docker-compose.productionrod.yml stop
+	docker compose -f docker-compose.prod.yml stop
 
 up.production:
-	docker compose -f docker-compose.productionrod.yml up -d
+	docker compose -f docker-compose.prod.yml up -d
 
 composer-update.production:
 	docker exec  events-app bash -c "composer update"
 
 data.production:
 	docker exec  events-app bash -c "php artisan migrate:fresh --seed"
+	
 bash.production:
 	docker exec -it  events-app bash
 start.production:
-	docker compose -f docker-compose.productionrod.yml restart
+	docker compose -f docker-compose.prod.yml restart
 
 boost.production:
 	docker exec  events-app bash -c "php artisan optimize"
@@ -88,14 +89,13 @@ update.production:
 	 git pull && cd mgt-app &&  yarn ; yarn build && pm2 restart production.config.cjs &&  cd  ../ && make start
 
 # Define the directory and the command
-DIR1 := ./mgt-app 
+DIR1 := ./frontend-app 
 DIR2 := ./site-app 
 CMD := yarn && yarn build
-CMD1 := pm2 start ecosystem.config.cjs
+CMD1 := pm2 restart production.config.cjs
 
 
 # Target to change to the specified directory and execute the command
 yarn.production:
 	@cd $(DIR1) && $(CMD) && $(CMD1)
-	@cd $(DIR2) && $(CMD) && $(CMD1)
-	@echo "Command executed in $(DIR1) and $(DIR2)"
+	@echo "Command executed in $(DIR1)"
