Production: restructure compose files

--- a/backend-api/Makefile
+++ b/backend-api/Makefile
@@ -66,25 +66,25 @@ up.production:
 	docker compose -f docker-compose.prod.yml up -d
 
 composer-update.production:
-	docker exec  events-app bash -c "composer update"
+	docker exec  events-app-api bash -c "composer update"
 
 data.production:
-	docker exec  events-app bash -c "php artisan migrate:fresh --seed"
+	docker exec  events-app-api bash -c "php artisan migrate:fresh --seed"
 	
 bash.production:
-	docker exec -it  events-app bash
+	docker exec -it  events-app-api bash
 start.production:
 	docker compose -f docker-compose.prod.yml restart
 
 boost.production:
-	docker exec  events-app bash -c "php artisan optimize"
-	docker exec  events-app bash -c "composer dump-autoload"
-	docker exec  events-app bash -c "chown -R www-data:www-data /var/www/html/storage /var/www/html/public /var/www/html/bootstrap/cache"
-	docker exec  events-app bash -c "chmod -R 775 /var/www/html/storage /var/www/html/bootstrap/cache"
+	docker exec  events-app-api bash -c "php artisan optimize"
+	docker exec  events-app-api bash -c "composer dump-autoload"
+	docker exec  events-app-api bash -c "chown -R www-data:www-data /var/www/html/storage /var/www/html/public /var/www/html/bootstrap/cache"
+	docker exec  events-app-api bash -c "chmod -R 775 /var/www/html/storage /var/www/html/bootstrap/cache"
 rmi.production:
-	docker image rm -f events-app-events-app
+	docker image rm -f events-app-api-events-app-api
 logs.production:
-	docker logs -f events-app
+	docker logs -f events-app-api
 update.production: 
 	 git pull && cd mgt-app &&  yarn ; yarn build && pm2 restart production.config.cjs &&  cd  ../ && make start
 
