--- a/backend-api/docker-compose.prod.yml
+++ b/backend-api/docker-compose.prod.yml
@@ -1,6 +1,8 @@
+version: '3.9'  # Use the latest version available
+
 services:
-  events-app:
-    container_name: events-app
+  events-app-api:
+    container_name: events-app-api
     build:
       context: .
       dockerfile: Dockerfile
@@ -8,25 +10,51 @@ services:
       - ./:/var/www/html
     ports:
       - 6030:80
+    environment:
+      APP_ENV: development  # Example environment variable
+      APP_DEBUG: 'false'
+    depends_on:
+      - events-app-db-01
+    networks:
+      - events_app_network_api
 
-  events_app_db_01:
-    container_name: events_app_db_01
+  events-app-db-01:
+    container_name: events-app-db-01
     image: mysql:8.0.33
     environment:
-      MYSQL_ROOT_PASSWORD: CallForOrder123455
-      MYSQL_DATABASE: events_ictc_db
+      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD:-rootpassword} # Use environment variables for sensitive data
+      MYSQL_DATABASE: ${DB_DATABASE}
+      MYSQL_USER: ${DB_USERNAME}  # Optionally specify a user
+      MYSQL_PASSWORD: ${DB_PASSWORD}  # Optionally specify a password
     volumes:
-      - mysql_data_production:/var/lib/mysql
+      - db_event_app_production:/var/lib/mysql
     ports:
-    - 3397:3306
+      - 3397:3306
+    healthcheck:
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
+      interval: 30s
+      timeout: 10s
+      retries: 5
+    networks:
+      - events_app_network_api
 
-  events_app_phpmyadmin_01:
-    container_name: events_app_phpmyadmin_01
+  events_app_phpmyadm_01:
+    container_name: events_app_phpmyadm_01
     image: phpmyadmin:5.2.1
     ports:
       - 7334:80
     environment:
-      - PMA_ARBITRARY=1
+      PMA_ARBITRARY: 1
+      PMA_HOST: events-app-db-01
+      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD:-rootpassword}
+    depends_on:
+      - events-app-db-01
+    networks:
+      - events_app_network_api
 
 volumes:
-  mysql_data_production:
+  db_event_app_production:
+
+networks:
+  events_app_network_api:
+    driver: bridge
