Production: 29 kikao changes

--- a/backend-api/Makefile
+++ b/backend-api/Makefile
@@ -1,36 +1,36 @@
-setup:
-	@make build
-	@make up
-	@make composer-update
+staging.setup:
+	@make staging.build
+	@make staging.up
+	@make staging.composer-update
 	# @yarn
 
-build:
+staging.build:
 	docker compose build 
 
-stop:
+staging.stop:
 	docker compose stop
-up:
+staging.up:
 	docker compose up -d
 
-composer-update:
+staging.composer-update:
 	docker exec  events-test bash -c "composer update"
-data:
+staging.data:
 	docker exec  events-test bash -c "php artisan migrate:fresh --seed"
-bash:
+staging.bash:
 	docker exec -it  events-test bash
-start:
+staging.start:
 	docker compose restart
-boost:
+staging.boost:
 	docker exec  events-test bash -c "php artisan optimize"
 	docker exec  events-test bash -c "composer dump-autoload"
 	docker exec  events-test bash -c "php artisan key:generate"
 	docker exec  events-test bash -c "chown -R www-data:www-data /var/www/html/storage /var/www/html/public /var/www/html/bootstrap/cache"
 	docker exec  events-test bash -c "chmod -R 775 /var/www/html/storage /var/www/html/bootstrap/cache"
-rmi:
+staging.rmi:
 	docker image rm -f events-test-events-test
-logs:
+staging.logs:
 	docker logs -f events-test
-update: 
+staging.update: 
 	 git pull && cd mgt-app &&  yarn ; yarn build && pm2 restart ecosystem.config.cjs &&  cd  ../ && make start
 # Define the directory and the command
 DIR1 := ./mgt-app 
@@ -40,7 +40,7 @@ CMD1 := pm2 start ecosystem.config.cjs
 
 
 # Target to change to the specified directory and execute the command
-yarn:
+staging.yarn:
 	@cd $(DIR1) && $(CMD) && $(CMD1)
 	@cd $(DIR2) && $(CMD) && $(CMD1)
 	@echo "Command executed in $(DIR1) and $(DIR2)"
@@ -49,44 +49,51 @@ yarn:
 #=== Production
 #================
 
-setup.production:
+production.setup:
+	@make production.build
+	@make production.up
+	@make production.composer-update
+	@make production.boost
+	@make production.yarn
+
+production.reload:
+	git pull origin production
+	@make production.stop
 	@make build.production
-	@make up.production
-	@make composer-update.production
-	@make boost.production
-	@make yarn.production
+	@make production.up
+	@make production.boost
 
 build.production:
 	docker compose -f docker-compose.prod.yml build 
 
-stop.production:
+production.stop:
 	docker compose -f docker-compose.prod.yml stop
 
-up.production:
+production.up:
 	docker compose -f docker-compose.prod.yml up -d
 
-composer-update.production:
+production.composer-update:
 	docker exec  events-app-api bash -c "composer update"
 
-data.production:
+production.data:
 	docker exec  events-app-api bash -c "php artisan migrate:fresh --seed"
 	
-bash.production:
+production.bash:
 	docker exec -it  events-app-api bash
-start.production:
+production.start:
 	docker compose -f docker-compose.prod.yml restart
 
-boost.production:
+production.boost:
 	docker exec  events-app-api bash -c "php artisan optimize"
 	docker exec  events-app-api bash -c "composer dump-autoload"
 	docker exec  events-app-api bash -c "chown -R www-data:www-data /var/www/html/storage /var/www/html/public /var/www/html/bootstrap/cache"
 	docker exec  events-app-api bash -c "chmod -R 775 /var/www/html/storage /var/www/html/bootstrap/cache"
-rmi.production:
+production.rmi:
 	docker image rm -f events-app-api-events-app-api
-logs.production:
+production.logs:
 	docker logs -f events-app-api
-update.production: 
-	 git pull && cd mgt-app &&  yarn ; yarn build && pm2 restart production.config.cjs &&  cd  ../ && make start
+production.update: 
+	 git pull && cd ../frontend-app &&  yarn ; yarn build && pm2 restart production.config.cjs &&  cd  ../backend-api && make start
 
 # Define the directory and the command
 DIR1 := ./frontend-app 
@@ -96,6 +103,6 @@ CMD1 := pm2 restart production.config.cjs
 
 
 # Target to change to the specified directory and execute the command
-yarn.production:
+production.yarn:
 	@cd $(DIR1) && $(CMD) && $(CMD1)
 	@echo "Command executed in $(DIR1)"
