Initiliaze: Staging changes

--- a/backend-api/Makefile
+++ b/backend-api/Makefile
@@ -4,6 +4,14 @@ staging.setup:
 	@make staging.composer-update
 	# @yarn
 
+staging.reload:
+	cd ../ && git pull origin staging
+	@make staging.stop
+	@make staging.build
+	@make staging.up
+	@make staging.boost
+	cd ./frontend-app/ && yarn && pm2 restart staging.config.cjs
+	
 staging.build:
 	docker compose build 
 
