Production Handle: Free Event bill generation

--- a/backend-api/Makefile
+++ b/backend-api/Makefile
@@ -58,7 +58,7 @@ staging.yarn:
 production.setup:
 	@make production.build
 	@make production.up
-	#@make production.composer-update
+	@make production.composer-update
 	@make production.boost
 	@make production.yarn
 
@@ -68,7 +68,6 @@ production.reload:
 	@make production.build
 	@make production.up
 	@make production.boost
-	cd ../frontend-app/ && yarn && pm2 restart production.config.cjs
 
 production.build:
 	docker compose -f docker-compose.prod.yml build 
