::Staging - on live

--- a/backend-api/docker-compose.prod.yml
+++ b/backend-api/docker-compose.prod.yml
@@ -23,7 +23,7 @@ services:
     depends_on:
       - db-events-app
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost"]
+      test: ["CMD", "curl", "-f", "https://innovation.ictc.go.tz"]
       interval: 30s
       timeout: 10s
       retries: 3
